interface Command {
    void execute();
    void undo();
}
