interface Visitor {
    void visit(CoffeeMachine coffeeMachine);
}
