@startuml

class CentralController {
    -devices: List<Device>
      -schedule: ScheduleManager
      -receipt: Receipt
      -executedTasks: Stack<Task>
      +addDevice(device: Device)
      +getDevice()
      +executeSchedule(currentTime: String)
      +undoLastTask()
      +acceptVisitor(visitor: Visitor)
}
class CoffeeMachine {
    -type: String
    -isOn: boolean
    -int: waterLevel
    -int: coffeeLevel
    -int: WATER_PER_COFFEE
    -int: COFFEE_PER_COFFEE
    +getWaterLevel()
    +getCoffeeLevel()
    +getStatus()
    +getType()
    +turnOn()
    +turnOff()
    +makeCoffee()
    +restoreResources(water: int, coffee: int)
    +accept(visitor: Visitor)
}
interface Command {
    +execute()
    +undo()
}
interface Device {
    +turnOn()
    +turnOff()
    +getType()
    +getStatus()
    +makeCoffee()
    +accept(visitor: Visitor)
}
class MakeCoffeeCommand {
    -coffeeMachine: CoffeeMachine
    - waterUsed: int
    -coffeeUsed: int:
    +execute()
    +undo()
}
class Receipt {
    -devices: Map<String, ProxyDevice>
    +addDevice(device: ProxyDevice)
    +makeCoffee()
}
class ResourceCheckerVisitor {
    -issues: List<String>
    +visit(coffeeMachine: CoffeeMachine)
    +getReport()
    +parseValue(status: String, prefix: String, suffix: String)
}
interface ScheduleInterface {
    +setSchedule()
    +getSchedule()
    +releaseTask(task: Task)
}
class ScheduleManager {
    -tasks: List<Task>
    +setSchedule()
    +getSchedule()
    +releaseTask(task: Task)
}
class Task {
    -time: String
    -command: Command
    +getTime()
    +execute()
    +undo()
}
class TurnOffCommand {
    -device: Device
    +execute()
    +undo()
}
class TurnOnCommand {
    -device: Device
    +execute()
    +undo()
}
interface Visitor {
    +visit(coffeeMachine: CoffeeMachine)
}

Device <|.. CoffeeMachine

Command <|.. TurnOnCommand
Command <|.. TurnOffCommand
Command <|.. MakeCoffeeCommand

Visitor <|.. ResourceCheckerVisitor

ScheduleInterface <|.. ScheduleManager

CentralController o--> Device
CentralController o--> ScheduleManager
CentralController o--> Receipt
CentralController o--> Task

Receipt o--> Device

ScheduleManager o--> Task

Task --> Command

TurnOnCommand --> Device
TurnOffCommand --> Device
MakeCoffeeCommand --> CoffeeMachine

CoffeeMachine --> Visitor

CentralController --> Visitor
@enduml